Fixed mistakes in 3D model viewer like removed overflow.

--- a/login-form/src/components/STLViewerComponent/STLViewerComponent.css
+++ b/login-form/src/components/STLViewerComponent/STLViewerComponent.css
@@ -45,8 +45,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 70vh; 
-    overflow-y: auto; 
+    overflow-y: auto;
 }
 
 .STlViewerComponent-modal-window {
@@ -55,4 +54,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    max-height: 65vh
+}
+
+.stl-model {
+    object-fit: contain; /* or cover based on your needs */
 }
